[package]
name = "rust-curves"
version = "0.1.0"
authors = ["Temitope Alaga <temdog007@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.22.0"
num-traits = "0.2.12"
serde ={version="1.0.116", features=["serde_derive"], optional = true}

[features]
default = []
serde-serialize = ["serde"]